# logicOcaml

./: .gitignore  README.md  dune-project
_build/: log
_build/default/: logic.dune-package  logic.install
_build/default/lib/: expression.ml  lexer.ml  logic.cma  logic.cmxa  logic.cmxs  logic.ml-gen  logicfunctions.ml  parser.ml
lib/: expression.ml  lexer.ml  logicfunctions.ml  parser.ml  test.ml  utils.ml
test/: dune
